// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageForm: Component should render correctly 1`] = `
.c0 {
  padding-bottom: 50px;
}

.c17 {
  position: relative;
  z-index: 999;
}

.c27 {
  margin-top: 30px;
  border-top: 2px solid #2F2F36;
  padding-top: 15px;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 15px;
  position: relative;
}

.c31 {
  padding-right: 10px;
}

.c30 {
  padding-left: 10px;
  max-width: 100%;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  padding-right: 10px;
}

.c35 {
  margin-top: 15px;
}

.c9 {
  cursor: pointer;
}

.c32 {
  color: #71737e;
  min-width: 100%;
}

.c5 {
  position: relative;
}

.c8 {
  position: absolute;
  right: 0;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  position: relative;
}

.c22 {
  text-align: right;
}

.c33 {
  padding: 0 10px;
}

.c33:before {
  content: '|';
  display: inline;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: move;
  touch-action: none;
}

.c6 {
  position: relative;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c11 {
  position: relative;
}

.c12 {
  margin-top: 0;
}

.c7 {
  position: relative;
  top: 0;
  left: 0;
  color: #f21e29;
  font-size: 14px;
  font-weight: normal;
}

.c1 {
  display: none;
}

.c2 {
  margin-right: 20px;
  overflow: hidden;
}

.c3 {
  color: #FFF;
}

.c4 {
  color: #FFF;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  padding-right: 30px;
  position: relative;
  font-size: 18px;
  cursor: pointer;
}

.c18 label {
  margin-bottom: 2px;
}

.c19 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: calc(100% - 90px);
  font-size: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  color: #71737e;
  max-width: 240px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: none;
}

.c20 {
  color: #71737e;
  text-align: center;
  padding-bottom: 20px;
  min-height: 43px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  width: 33%;
}

.c13 {
  padding-bottom: 30px;
}

.c15 {
  font-size: 15px;
  padding: 20px 0 5px;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c16 {
  color: #71737e;
}

.c14 {
  margin-top: 10px;
  padding: 0 20px 20px;
}

.c34 {
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  cursor: pointer;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c34:hover {
  border-bottom: 1px solid #FFF;
}

@media (min-width:480px) {
  .c28 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:480px) {
  .c29 {
    padding-right: 40px;
  }
}

@media (min-width:480px) {
  .c35 {
    margin-top: 0;
  }
}

@media (min-width:1050px) {
  .c10 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:1050px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:768px) {

}

@media (min-width:1050px) {
  .c23 {
    max-width: calc(100% - 350px);
  }
}

@media (min-width:1050px) {
  .c26 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c20 {
    margin-top: 0px;
    padding-bottom: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h2
        className="c3"
        id="desktopHeaderTitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        title
      </h2>
      <h1
        className="c4"
        id="desktopHeaderSubtitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHeight": 1.25,
            "margin": 0,
          }
        }
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "maxWidth": "100%",
                  "paddingBottom": 0,
                  "paddingRight": 40,
                  "position": "static",
                }
              }
            >
              <input
                id="name"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Name"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "border": "none",
                    "color": "#FFF",
                    "fontFamily": "inherit",
                    "fontSize": 24,
                    "fontWeight": 600,
                    "letterSpacing": "normal",
                    "lineHeight": "24px",
                    "maxWidth": "100%",
                    "minWidth": 60,
                    "outline": "none",
                    "padding": 0,
                    "width": 80,
                  }
                }
                type="text"
                value="page name"
              />
              <div
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "border": "none",
                    "color": "#FFF",
                    "fontFamily": "inherit",
                    "fontSize": 24,
                    "fontWeight": 600,
                    "letterSpacing": "normal",
                    "lineHeight": "24px",
                    "maxWidth": "100%",
                    "minWidth": 60,
                    "opacity": 0,
                    "outline": "none",
                    "padding": 0,
                    "position": "fixed",
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                page name
              </div>
              <div
                style={
                  Object {
                    "position": "absolute",
                    "right": 0,
                    "top": 2,
                  }
                }
              >
                <label
                  htmlFor="name"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="c7"
              id="nameError"
            />
          </div>
          <div
            className="c8"
          >
            <label
              className="c9"
              htmlFor="name"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </label>
          </div>
        </div>
      </h1>
    </div>
    <div
      className=""
    />
  </div>
  <div
    className="c10"
  >
    <div
      className="c11"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          Name
        </label>
        <input
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontFamily": "inherit",
              "fontSize": "18px",
              "fontWeight": "inherit",
              "letterSpacing": "normal",
              "lineHeight": "24px",
              "maxWidth": "100%",
              "minWidth": 60,
              "outline": "none",
              "padding": 0,
            }
          }
          type="text"
          value="page name"
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 2,
            }
          }
        >
          <label
            htmlFor="name"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <div
              className="c12"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </label>
        </div>
      </div>
      <div
        className="c7"
        id="nameError"
      />
    </div>
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="displayName"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        URL Display Name
      </label>
      <input
        id="displayName"
        name="displayName"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="page-name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="displayName"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="displayNameError"
    />
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="description"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        SEO Page Description
      </label>
      <textarea
        id="description"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "lineHeight": "24px",
            "outline": "none",
            "padding": "0",
            "resize": "none",
          }
        }
        value="description"
      />
      <textarea
        aria-hidden={true}
        readOnly={true}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "left": 0,
            "lineHeight": "24px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "0",
            "position": "absolute",
            "resize": "none",
            "top": 0,
            "visibility": "hidden",
          }
        }
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="description"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="descriptionError"
    />
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="keywords"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        SEO Keywords
      </label>
      <input
        id="keywords"
        name="keywords"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="keyword;"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="keywords"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="keywordsError"
    />
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="link"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Frontend page Link
      </label>
      <input
        id="link"
        name="link"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="link"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="linkError"
    />
  </div>
  <label
    style={
      Object {
        "border": "none",
        "borderTop": "2px solid #2F2F36",
        "color": "#71737e",
        "display": "block",
        "fontSize": "14px",
        "outline": "none",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    Tags
  </label>
  <div
    className="c13"
  >
    <div
      className="c14"
    >
      <div
        className="c15"
        title="Colors"
      >
        <span
          className="c16"
        >
          Category: 
        </span>
        Colors
      </div>
      <div
        className=""
      >
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-17k7d72-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-193kkzd-ValueContainer"
            >
              <div
                className=" css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                className="css-14m14bb-Input"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                0
                /
                4
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c15"
        title="Countries"
      >
        <span
          className="c16"
        >
          Category: 
        </span>
        Countries
      </div>
      <div
        className=""
      >
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-17k7d72-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-193kkzd-ValueContainer"
            >
              <div
                className=" css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                className="css-14m14bb-Input"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                0
                /
                1
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c17"
  >
    <div
      className="c18"
      onClick={[Function]}
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Page Template
      </label>
      <input
        id="template"
        name="template"
        type="hidden"
        value={1}
      />
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          id="pageTemplateSelect"
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                }
              }
            >
              Page template
            </div>
          </div>
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "184px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 99,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              (blank)
            </div>
            <div
              id="select-item-1"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              Page template
            </div>
            <div
              id="select-item-2"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              Page template 2
            </div>
          </div>
        </div>
      </div>
      <div
        className="c19"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c20"
  >
    <div
      className="c21"
      id="tagsCounter"
    />
    1 Block
    <div
      className="c21"
    >
      <div
        className="c22"
      >
        <button
          disabled={false}
          id="addBlock"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "4px",
              "color": "#000",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "14px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "32px",
              "outline": "none",
              "padding": "0 8px 0 6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": 24,
                "shapeRendering": "crispEdges",
                "width": 24,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
            />
          </svg>
          Block
        </button>
      </div>
    </div>
  </div>
  <span>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "padding": "10px 0 20px",
          "textDecoration": "underline",
        }
      }
    >
      Expand Blocks
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "space-between",
          "opacity": 1,
          "position": "relative",
          "transform": "translate3d(0, 0, 0)",
          "width": "100%",
          "zIndex": 1,
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "2px solid #FFF",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#000",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 60,
              "paddingRight": 40,
              "position": "relative",
            }
          }
        >
          <div
            className="c23"
          >
            <div
              className="c24"
            >
              <div>
                <div
                  className="c25"
                >
                  <svg
                    style={
                      Object {
                        "fill": "#FFF",
                        "height": "60px",
                        "marginRight": 20,
                        "width": 10,
                      }
                    }
                    viewBox="0 0 10 60"
                  >
                    <path
                      d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              className="c6"
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                    "maxWidth": "100%",
                    "paddingBottom": 0,
                    "position": "relative",
                  }
                }
              >
                <input
                  id="blocks.0.name"
                  name="blocks.0.name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Name"
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "border": "none",
                      "color": "#FFF",
                      "fontFamily": "inherit",
                      "fontSize": "18px",
                      "fontWeight": "inherit",
                      "letterSpacing": "normal",
                      "lineHeight": "24px",
                      "maxWidth": "100%",
                      "minWidth": 60,
                      "outline": "none",
                      "padding": 0,
                      "width": 80,
                    }
                  }
                  type="text"
                />
                <div
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "border": "none",
                      "color": "#FFF",
                      "fontFamily": "inherit",
                      "fontSize": "18px",
                      "fontWeight": "inherit",
                      "letterSpacing": "normal",
                      "lineHeight": "24px",
                      "maxWidth": "100%",
                      "minWidth": 60,
                      "opacity": 0,
                      "outline": "none",
                      "padding": 0,
                      "position": "fixed",
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "position": "absolute",
                      "right": 0,
                      "top": 2,
                    }
                  }
                >
                  <label
                    htmlFor="blocks.0.name"
                    style={
                      Object {
                        "cursor": "pointer",
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="c7"
                id="blocks.0.nameError"
              />
            </div>
            <div
              className="c24"
            >
              <label
                className="c9"
                htmlFor="blocks.0.name"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                    fillRule="evenodd"
                  />
                </svg>
              </label>
              <svg
                id="blocks.0"
                onClick={[Function]}
                style={
                  Object {
                    "cursor": "pointer",
                    "fill": "#FFF",
                    "height": 16,
                    "margin": "-3px 0 0 5px",
                    "width": 16,
                  }
                }
                viewBox="-47 0 512 512"
              >
                <path
                  d="M416.875 114.441L405.57 80.555a31.527 31.527 0 00-29.941-21.578h-95.012V28.043C280.617 12.582 268.047 0 252.59 0h-87.008c-15.453 0-28.027 12.582-28.027 28.043v30.934H42.547a31.528 31.528 0 00-29.945 21.578L1.297 114.44a25.426 25.426 0 003.484 22.856 25.427 25.427 0 0020.578 10.539h11.817L63.184 469.44C65.117 493.305 85.367 512 109.293 512h204.863c23.922 0 44.176-18.695 46.106-42.563l26.008-321.601h6.543A25.434 25.434 0 00413.39 137.3a25.434 25.434 0 003.484-22.86zM167.555 30h83.062v28.977h-83.062zm162.804 437.02c-.68 8.402-7.796 14.98-16.203 14.98H109.293c-8.406 0-15.523-6.578-16.203-14.98L67.273 147.836h288.899zM31.793 117.836l9.27-27.79c.21-.64.808-1.07 1.484-1.07h333.082c.676 0 1.27.43 1.484 1.07l9.27 27.79zm0 0"
                />
                <path
                  d="M282.516 465.957c.265.016.527.02.793.02 7.925 0 14.55-6.211 14.964-14.22L312.36 181.36c.43-8.273-5.93-15.332-14.199-15.761-8.293-.442-15.328 5.925-15.762 14.199l-14.082 270.398c-.43 8.274 5.926 15.332 14.2 15.762zm0 0M120.566 451.793c.438 7.996 7.055 14.184 14.965 14.184.274 0 .555-.008.832-.024 8.27-.45 14.61-7.52 14.16-15.793L135.77 179.762c-.45-8.274-7.52-14.614-15.793-14.16-8.27.449-14.61 7.52-14.16 15.793zm0 0M209.254 465.977c8.285 0 15-6.715 15-15V180.578c0-8.285-6.715-15-15-15s-15 6.715-15 15v270.399c0 8.285 6.715 15 15 15zm0 0"
                />
              </svg>
            </div>
          </div>
          <div
            className="c26"
            title="type"
          >
            type
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontSize": 0,
                "position": "absolute",
                "right": 0,
                "top": 9,
                "transform": "rotate(0deg)",
                "transformOrigin": "center center",
                "transition": "transform 200ms ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": 40,
                  "userSelect": "none",
                  "width": 40,
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M15.117 18L9 12h12z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "height": 0,
              "overflow": "hidden",
              "transition": "height 200ms linear, overflow 0s linear 200ms",
            }
          }
        >
          <div />
        </div>
      </div>
    </div>
     
  </span>
  <div
    className="c27"
  >
    <div
      className="c28"
    >
      <div
        className="c29"
      >
        <div>
          <input
            checked={false}
            id="isPublic"
            onChange={[Function]}
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
              }
            }
            type="checkbox"
          />
          <label
            htmlFor="isPublic"
          >
            <div
              style={
                Object {
                  "background": "#2F2F36",
                  "borderRadius": 20,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 24,
                  "padding": 2,
                  "transition": "background 200ms ease-in-out",
                  "width": 44,
                }
              }
            >
              <div
                style={
                  Object {
                    "background": "#FFF",
                    "borderRadius": "50%",
                    "height": 20,
                    "transform": "translateX(0)",
                    "transition": "transform 200ms ease-in-out",
                    "width": 20,
                  }
                }
              />
            </div>
          </label>
        </div>
        <div
          className="c30"
        >
          <label
            className="c31"
            htmlFor="isPublic"
          >
            Make it Public
          </label>
          <span
            className="c32"
          >
            This Page is currently Private
            <span
              className="c33"
            />
            <a
              className="c34"
              href="pageUrl"
              target="_blank"
            >
              Visit Page
            </a>
          </span>
        </div>
      </div>
      <div
        className="c35"
      >
        <button
          disabled={false}
          id="removePage"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "14px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "30px",
              "outline": "none",
              "padding": "0 16px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          Delete Page
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageForm: Component should render with page template 1`] = `
.c0 {
  padding-bottom: 50px;
}

.c17 {
  position: relative;
  z-index: 999;
}

.c27 {
  margin-top: 30px;
  border-top: 2px solid #2F2F36;
  padding-top: 15px;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 15px;
  position: relative;
}

.c31 {
  padding-right: 10px;
}

.c30 {
  padding-left: 10px;
  max-width: 100%;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  padding-right: 10px;
}

.c35 {
  margin-top: 15px;
}

.c9 {
  cursor: pointer;
}

.c32 {
  color: #71737e;
  min-width: 100%;
}

.c5 {
  position: relative;
}

.c8 {
  position: absolute;
  right: 0;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  position: relative;
}

.c22 {
  text-align: right;
}

.c33 {
  padding: 0 10px;
}

.c33:before {
  content: '|';
  display: inline;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: move;
  touch-action: none;
}

.c6 {
  position: relative;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c11 {
  position: relative;
}

.c12 {
  margin-top: 0;
}

.c7 {
  position: relative;
  top: 0;
  left: 0;
  color: #f21e29;
  font-size: 14px;
  font-weight: normal;
}

.c1 {
  display: none;
}

.c2 {
  margin-right: 20px;
  overflow: hidden;
}

.c3 {
  color: #FFF;
}

.c4 {
  color: #FFF;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  padding-right: 30px;
  position: relative;
  font-size: 18px;
  cursor: pointer;
}

.c18 label {
  margin-bottom: 2px;
}

.c19 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: calc(100% - 90px);
  font-size: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  color: #71737e;
  max-width: 240px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: none;
}

.c20 {
  color: #71737e;
  text-align: center;
  padding-bottom: 20px;
  min-height: 43px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  width: 33%;
}

.c13 {
  padding-bottom: 30px;
}

.c15 {
  font-size: 15px;
  padding: 20px 0 5px;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c16 {
  color: #71737e;
}

.c14 {
  margin-top: 10px;
  padding: 0 20px 20px;
}

.c34 {
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  cursor: pointer;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c34:hover {
  border-bottom: 1px solid #FFF;
}

@media (min-width:480px) {
  .c28 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:480px) {
  .c29 {
    padding-right: 40px;
  }
}

@media (min-width:480px) {
  .c35 {
    margin-top: 0;
  }
}

@media (min-width:1050px) {
  .c10 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:1050px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:768px) {

}

@media (min-width:1050px) {
  .c23 {
    max-width: calc(100% - 350px);
  }
}

@media (min-width:1050px) {
  .c26 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c20 {
    margin-top: 0px;
    padding-bottom: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h2
        className="c3"
        id="desktopHeaderTitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        title
      </h2>
      <h1
        className="c4"
        id="desktopHeaderSubtitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHeight": 1.25,
            "margin": 0,
          }
        }
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "maxWidth": "100%",
                  "paddingBottom": 0,
                  "paddingRight": 40,
                  "position": "static",
                }
              }
            >
              <input
                id="name"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Name"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "border": "none",
                    "color": "#FFF",
                    "fontFamily": "inherit",
                    "fontSize": 24,
                    "fontWeight": 600,
                    "letterSpacing": "normal",
                    "lineHeight": "24px",
                    "maxWidth": "100%",
                    "minWidth": 60,
                    "outline": "none",
                    "padding": 0,
                    "width": 80,
                  }
                }
                type="text"
                value="page name"
              />
              <div
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "border": "none",
                    "color": "#FFF",
                    "fontFamily": "inherit",
                    "fontSize": 24,
                    "fontWeight": 600,
                    "letterSpacing": "normal",
                    "lineHeight": "24px",
                    "maxWidth": "100%",
                    "minWidth": 60,
                    "opacity": 0,
                    "outline": "none",
                    "padding": 0,
                    "position": "fixed",
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                page name
              </div>
              <div
                style={
                  Object {
                    "position": "absolute",
                    "right": 0,
                    "top": 2,
                  }
                }
              >
                <label
                  htmlFor="name"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="c7"
              id="nameError"
            />
          </div>
          <div
            className="c8"
          >
            <label
              className="c9"
              htmlFor="name"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </label>
          </div>
        </div>
      </h1>
    </div>
    <div
      className=""
    />
  </div>
  <div
    className="c10"
  >
    <div
      className="c11"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          Name
        </label>
        <input
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontFamily": "inherit",
              "fontSize": "18px",
              "fontWeight": "inherit",
              "letterSpacing": "normal",
              "lineHeight": "24px",
              "maxWidth": "100%",
              "minWidth": 60,
              "outline": "none",
              "padding": 0,
            }
          }
          type="text"
          value="page name"
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 2,
            }
          }
        >
          <label
            htmlFor="name"
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <div
              className="c12"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </label>
        </div>
      </div>
      <div
        className="c7"
        id="nameError"
      />
    </div>
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="displayName"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        URL Display Name
      </label>
      <input
        id="displayName"
        name="displayName"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="page-name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="displayName"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="displayNameError"
    />
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="description"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        SEO Page Description
      </label>
      <textarea
        id="description"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "lineHeight": "24px",
            "outline": "none",
            "padding": "0",
            "resize": "none",
          }
        }
        value="description"
      />
      <textarea
        aria-hidden={true}
        readOnly={true}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "left": 0,
            "lineHeight": "24px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "0",
            "position": "absolute",
            "resize": "none",
            "top": 0,
            "visibility": "hidden",
          }
        }
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="description"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="descriptionError"
    />
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="keywords"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        SEO Keywords
      </label>
      <input
        id="keywords"
        name="keywords"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="keyword;"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="keywords"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="keywordsError"
    />
  </div>
  <div
    className="c11"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="link"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Frontend page Link
      </label>
      <input
        id="link"
        name="link"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="link"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c7"
      id="linkError"
    />
  </div>
  <label
    style={
      Object {
        "border": "none",
        "borderTop": "2px solid #2F2F36",
        "color": "#71737e",
        "display": "block",
        "fontSize": "14px",
        "outline": "none",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    Tags
  </label>
  <div
    className="c13"
  >
    <div
      className="c14"
    >
      <div
        className="c15"
        title="Colors"
      >
        <span
          className="c16"
        >
          Category: 
        </span>
        Colors
      </div>
      <div
        className=""
      >
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-17k7d72-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-193kkzd-ValueContainer"
            >
              <div
                className=" css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                className="css-14m14bb-Input"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-4-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                0
                /
                4
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c15"
        title="Countries"
      >
        <span
          className="c16"
        >
          Category: 
        </span>
        Countries
      </div>
      <div
        className=""
      >
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-17k7d72-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-193kkzd-ValueContainer"
            >
              <div
                className=" css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                className="css-14m14bb-Input"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-5-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                0
                /
                1
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c17"
  >
    <div
      className="c18"
      onClick={[Function]}
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Page Template
      </label>
      <input
        id="template"
        name="template"
        type="hidden"
        value={1}
      />
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          id="pageTemplateSelect"
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                }
              }
            >
              Page template
            </div>
          </div>
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "184px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 99,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              (blank)
            </div>
            <div
              id="select-item-1"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              Page template
            </div>
            <div
              id="select-item-2"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              Page template 2
            </div>
          </div>
        </div>
      </div>
      <div
        className="c19"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c20"
  >
    <div
      className="c21"
      id="tagsCounter"
    />
    1 Block
    <div
      className="c21"
    >
      <div
        className="c22"
      >
        <button
          disabled={false}
          id="addBlock"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "4px",
              "color": "#000",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "14px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "32px",
              "outline": "none",
              "padding": "0 8px 0 6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": 24,
                "shapeRendering": "crispEdges",
                "width": 24,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
            />
          </svg>
          Block
        </button>
      </div>
    </div>
  </div>
  <span>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "padding": "10px 0 20px",
          "textDecoration": "underline",
        }
      }
    >
      Expand Blocks
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "space-between",
          "opacity": 1,
          "position": "relative",
          "transform": "translate3d(0, 0, 0)",
          "width": "100%",
          "zIndex": 1,
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "2px solid #FFF",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#000",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 60,
              "paddingRight": 40,
              "position": "relative",
            }
          }
        >
          <div
            className="c23"
          >
            <div
              className="c24"
            >
              <div>
                <div
                  className="c25"
                >
                  <svg
                    style={
                      Object {
                        "fill": "#FFF",
                        "height": "60px",
                        "marginRight": 20,
                        "width": 10,
                      }
                    }
                    viewBox="0 0 10 60"
                  >
                    <path
                      d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              className="c6"
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                    "maxWidth": "100%",
                    "paddingBottom": 0,
                    "position": "relative",
                  }
                }
              >
                <input
                  id="blocks.0.name"
                  name="blocks.0.name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Name"
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "border": "none",
                      "color": "#FFF",
                      "fontFamily": "inherit",
                      "fontSize": "18px",
                      "fontWeight": "inherit",
                      "letterSpacing": "normal",
                      "lineHeight": "24px",
                      "maxWidth": "100%",
                      "minWidth": 60,
                      "outline": "none",
                      "padding": 0,
                      "width": 80,
                    }
                  }
                  type="text"
                />
                <div
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "border": "none",
                      "color": "#FFF",
                      "fontFamily": "inherit",
                      "fontSize": "18px",
                      "fontWeight": "inherit",
                      "letterSpacing": "normal",
                      "lineHeight": "24px",
                      "maxWidth": "100%",
                      "minWidth": 60,
                      "opacity": 0,
                      "outline": "none",
                      "padding": 0,
                      "position": "fixed",
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "position": "absolute",
                      "right": 0,
                      "top": 2,
                    }
                  }
                >
                  <label
                    htmlFor="blocks.0.name"
                    style={
                      Object {
                        "cursor": "pointer",
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="c7"
                id="blocks.0.nameError"
              />
            </div>
            <div
              className="c24"
            >
              <label
                className="c9"
                htmlFor="blocks.0.name"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                    fillRule="evenodd"
                  />
                </svg>
              </label>
              <svg
                id="blocks.0"
                onClick={[Function]}
                style={
                  Object {
                    "cursor": "pointer",
                    "fill": "#FFF",
                    "height": 16,
                    "margin": "-3px 0 0 5px",
                    "width": 16,
                  }
                }
                viewBox="-47 0 512 512"
              >
                <path
                  d="M416.875 114.441L405.57 80.555a31.527 31.527 0 00-29.941-21.578h-95.012V28.043C280.617 12.582 268.047 0 252.59 0h-87.008c-15.453 0-28.027 12.582-28.027 28.043v30.934H42.547a31.528 31.528 0 00-29.945 21.578L1.297 114.44a25.426 25.426 0 003.484 22.856 25.427 25.427 0 0020.578 10.539h11.817L63.184 469.44C65.117 493.305 85.367 512 109.293 512h204.863c23.922 0 44.176-18.695 46.106-42.563l26.008-321.601h6.543A25.434 25.434 0 00413.39 137.3a25.434 25.434 0 003.484-22.86zM167.555 30h83.062v28.977h-83.062zm162.804 437.02c-.68 8.402-7.796 14.98-16.203 14.98H109.293c-8.406 0-15.523-6.578-16.203-14.98L67.273 147.836h288.899zM31.793 117.836l9.27-27.79c.21-.64.808-1.07 1.484-1.07h333.082c.676 0 1.27.43 1.484 1.07l9.27 27.79zm0 0"
                />
                <path
                  d="M282.516 465.957c.265.016.527.02.793.02 7.925 0 14.55-6.211 14.964-14.22L312.36 181.36c.43-8.273-5.93-15.332-14.199-15.761-8.293-.442-15.328 5.925-15.762 14.199l-14.082 270.398c-.43 8.274 5.926 15.332 14.2 15.762zm0 0M120.566 451.793c.438 7.996 7.055 14.184 14.965 14.184.274 0 .555-.008.832-.024 8.27-.45 14.61-7.52 14.16-15.793L135.77 179.762c-.45-8.274-7.52-14.614-15.793-14.16-8.27.449-14.61 7.52-14.16 15.793zm0 0M209.254 465.977c8.285 0 15-6.715 15-15V180.578c0-8.285-6.715-15-15-15s-15 6.715-15 15v270.399c0 8.285 6.715 15 15 15zm0 0"
                />
              </svg>
            </div>
          </div>
          <div
            className="c26"
            title="type"
          >
            type
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontSize": 0,
                "position": "absolute",
                "right": 0,
                "top": 9,
                "transform": "rotate(0deg)",
                "transformOrigin": "center center",
                "transition": "transform 200ms ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": 40,
                  "userSelect": "none",
                  "width": 40,
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M15.117 18L9 12h12z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "height": 0,
              "overflow": "hidden",
              "transition": "height 200ms linear, overflow 0s linear 200ms",
            }
          }
        >
          <div />
        </div>
      </div>
    </div>
     
  </span>
  <div
    className="c27"
  >
    <div
      className="c28"
    >
      <div
        className="c29"
      >
        <div>
          <input
            checked={false}
            id="isPublic"
            onChange={[Function]}
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
              }
            }
            type="checkbox"
          />
          <label
            htmlFor="isPublic"
          >
            <div
              style={
                Object {
                  "background": "#2F2F36",
                  "borderRadius": 20,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 24,
                  "padding": 2,
                  "transition": "background 200ms ease-in-out",
                  "width": 44,
                }
              }
            >
              <div
                style={
                  Object {
                    "background": "#FFF",
                    "borderRadius": "50%",
                    "height": 20,
                    "transform": "translateX(0)",
                    "transition": "transform 200ms ease-in-out",
                    "width": 20,
                  }
                }
              />
            </div>
          </label>
        </div>
        <div
          className="c30"
        >
          <label
            className="c31"
            htmlFor="isPublic"
          >
            Make it Public
          </label>
          <span
            className="c32"
          >
            This Page is currently Private
            <span
              className="c33"
            />
            <a
              className="c34"
              href="pageUrl"
              target="_blank"
            >
              Visit Page
            </a>
          </span>
        </div>
      </div>
      <div
        className="c35"
      >
        <button
          disabled={false}
          id="removePage"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "14px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "30px",
              "outline": "none",
              "padding": "0 16px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          Delete Page
        </button>
      </div>
    </div>
  </div>
</div>
`;
